# latte-applets

./: Makefile.am  configure.ac  default.layout
bonus/: Makefile  main.c  test.c
bonus/latte/: if.sh  internet.sh  menu.sh  mount.sh  nmount.sh  quit.sh  restart.sh  umount.sh
button/: Makefile.am  button.c  org.mate.applets.buttonApplet.mate-panel-applet.in.in  org.mate.panel.applet.buttonAppletFactory.service.in
clock/: Makefile.am  aclock.c  org.mate.applets.aclockApplet.mate-panel-applet.in.in  org.mate.panel.applet.aclockAppletFactory.service.in
mount/: Makefile.am  devices.c  devices.h  mount.c  org.mate.applets.mountApplet.mate-panel-applet.in.in  org.mate.panel.applet.mountAppletFactory.service.in
po/: pt.po
timerapplet/: timerapplet.c
